# subset_makes_simple

./: CMakeLists.txt  time.sh  小组分工.txt
data/: 1.in  2.in  3.in  4.in  5.in  6.in  7.in
src/: dfs.cpp  dp.cpp  fft.cpp  paper.cpp
